--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6b7abc7b-b435-43d1-9fd8-c349ee8710f3",
    "metadata": {},
    "source": [
     "# Manage Qiskit Serverless compute and data resources\n",
@@ -14,7 +13,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2d40a63-3359-46e9-8f1b-4746b449b407",
    "metadata": {},
    "source": [
     "For classical tasks that can be parallelized, use the `@distribute_task` decorater to define compute requirements needed to perform a task. Start by recalling the `transpile_parallel.py` example from the [Write your first Qiskit Serverless program](./serverless-first-program) topic:"
@@ -22,22 +20,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "475d82f0-15cc-4db3-b3b0-54b07822b2a0",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# /source_files/transpile_remote.py\n",
+    "# This cell is hidden from users\n",
+    "from pathlib import Path\n",
+    "Path(\"./source_files\").mkdir(exist_ok=True, parents=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ./source_files/transpile_remote.py\n",
     "\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit_serverless import distribute_task\n",
+    "\n",
+    "service = QiskitRuntimeService()\n",
     "\n",
     "@distribute_task(target={\"cpu\": 1})\n",
     "def transpile_remote(circuit, optimization_level, backend):\n",
-    "    \"\"\"Transpiles an abstract circuit into an ISA circuit for a given backend.\"\"\"\n",
+    "    \"\"\"Transpiles an abstract circuit (or list of circuits) into an ISA circuit for a given backend.\"\"\"\n",
     "    pass_manager = generate_preset_pass_manager(\n",
     "        optimization_level=optimization_level,\n",
-    "\t\tbackend=backend\n",
+    "\t\tbackend=service.backend(backend)\n",
     "    )\n",
     "    isa_circuit = pass_manager.run(circuit)\n",
     "    return isa_circuit"
@@ -45,51 +64,162 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5914f1d-f898-4db4-8d1e-ccc8081883b9",
    "metadata": {},
    "source": [
     "In this example, you decorated the `transpile_remote()` method with `@distribute_task(target={\"cpu\": 1})`. When run, this creates an asynchronous parallel worker task with a single CPU core, and returns with a reference to track the worker. To fetch the result, pass the reference to the `get()` method:"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "74fdcd4a-01cd-46ca-aa24-2a8a3605346f",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
    "source": [
-    "```python\n",
-    "from qiskit_serverless import get\n",
+    "%%writefile --append ./source_files/transpile_remote.py\n",
     "\n",
-    "transpile_worker_reference = transpile_remote(circuit, optimization_level, backend)\n",
+    "from qiskit_serverless import get, get_arguments, save_result\n",
+    "\n",
+    "arguments = get_arguments()\n",
+    "circuit = arguments.get(\"circuit\")\n",
+    "optimization_level = arguments.get(\"optimization_level\")\n",
+    "backend = arguments.get(\"backend\")\n",
+    "\n",
+    "transpile_worker_reference = transpile_remote(\n",
+    "    circuit,\n",
+    "    optimization_level,\n",
+    "    backend\n",
+    ")\n",
     "result = get(transpile_worker_reference)\n",
-    "```"
+    "save_result(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile --append ./source_files/transpile_remote.py\n",
+    "# This cell is hidden from users. It checks the transpilation ran correctly.\n",
+    "from qiskit import QuantumCircuit\n",
+    "assert isinstance(result, QuantumCircuit)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "268d5ef6-12cf-4ba5-95a3-f7460e4b3bfc",
    "metadata": {},
    "source": [
     "You can also create and run multiple parallel tasks as follows:"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ac99b4a0-4a42-4c43-869d-265344b70359",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
    "source": [
-    "```python\n",
+    "%%writefile --append ./source_files/transpile_remote.py\n",
+    "\n",
     "transpile_worker_references = [\n",
     "    transpile_remote(circuit, optimization_level, backend)\n",
-    "    for circuit in circuit_list\n",
+    "    for circuit in arguments.get(\"circuit_list\")\n",
     "]\n",
     "\n",
     "results = get(transpile_worker_references)\n",
-    "```"
+    "save_result(results)  # Overwrites any previously saved results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile --append ./source_files/transpile_remote.py\n",
+    "# This cell is hidden from users. It checks the transpilation ran correctly.\n",
+    "assert isinstance(results[0], QuantumCircuit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Job still running, waiting 5s then retrying (9)\r"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell is hidden from users.\n",
+    "# It uploads the serverless program and checks it runs.\n",
+    "\n",
+    "from qiskit.circuit.random import random_circuit\n",
+    "from qiskit_serverless import IBMServerlessClient, QiskitFunction\n",
+    "import time\n",
+    "\n",
+    "TITLE = \"transpile_remote_serverless_test\"  # TODO: Randomize names to avoid conflict\n",
+    "serverless = IBMServerlessClient()\n",
+    "transpile_remote_demo = QiskitFunction(\n",
+    "    title=TITLE,\n",
+    "    entrypoint=\"transpile_remote.py\",\n",
+    "    working_dir=\"./source_files/\",\n",
+    "\tdependencies=[\"qiskit-aer==0.14.1\"],\n",
+    ")\n",
+    "serverless.upload(transpile_remote_demo)\n",
+    "job = serverless.get(TITLE).run(\n",
+    "    circuit=random_circuit(3,3),\n",
+    "    circuit_list=[random_circuit(3,3) for _ in range(3)],\n",
+    "    backend=\"ibm_kyiv\",\n",
+    "    optimization_level=1,\n",
+    ")\n",
+    "for retry in range(20):\n",
+    "    status = job.status()\n",
+    "    if status == \"DONE\":\n",
+    "        break\n",
+    "    if status == \"ERROR\":\n",
+    "        raise Exception(\"Something went wrong. See following serverless logs:\\n\\n\" + job.logs())\n",
+    "    print(f\"Job still running, waiting 5s then retrying ({retry})\", end=\"\\r\")\n",
+    "    time.sleep(5)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "611fe030-4494-46b5-9ea1-9678ac513210",
    "metadata": {},
    "source": [
     "### Explore different task configurations\n",
@@ -103,11 +233,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cea90969-cfbf-4181-9ffa-524f3709dc69",
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile ./source_files/transpile_remote.py\n",
+    "\n",
     "@distribute_task(target={\n",
     "    \"cpu\": 16,\n",
     "    \"mem\": 32 * 1024 * 1024 * 1024\n",
@@ -117,8 +256,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users\n",
+    "# Clean up file afterwards\n",
+    "Path(\"./source_files/transpile_remote.py\").unlink()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "f6fff174-301f-47ca-b7c6-69bb5298fd14",
    "metadata": {},
    "source": [
     "## Automatic QPU selection\n",
@@ -133,18 +282,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b9b38d02-1c4b-4598-abc8-f2ff2f3c1d23",
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ./source_files/transpile_parallel.py\n"
+     ]
+    }
+   ],
    "source": [
-    "```python\n",
-    "# source_files/transpile_parallel.py\n",
+    "%%writefile ./source_files/transpile_parallel.py\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit.circuit.random import random_circuit\n",
     "from qiskit_serverless_tools.selectors import IBMLeastNoisyQPUSelector\n",
     "\n",
-    "service = QiskitRuntimeService(channel='ibm_quantum', token=API_TOKEN)\n",
+    "service = QiskitRuntimeService()\n",
     "\n",
     "abstract_circuit = random_circuit(\n",
     "    num_qubits=100, depth=4, measure=True\n",
@@ -154,13 +311,11 @@
     "    service, circuit=abstract_circuit, transpile_options={\"optimization_level\": 3}\n",
     ")\n",
     "backend = selector.get_backend(min_num_qubits=127)\n",
-    "target_circuit = selector.optimized_circuit\n",
-    "```"
+    "target_circuit = selector.optimized_circuit"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8eda9b3e-31c3-4783-b5f6-a72bd31e41b6",
    "metadata": {},
    "source": [
     "You can also use the `IBMLeastBusyQPUSelector` to find a QPU that can support the circuit width but with the shortest queue."
@@ -168,12 +323,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "10bdb211-0d53-4269-aa92-51ecf494bd63",
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ./source_files/transpile_parallel.py\n"
+     ]
+    }
+   ],
    "source": [
-    "# source_files/transpile_parallel.py\n",
+    "%%writefile --append ./source_files/transpile_parallel.py\n",
     "\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit_serverless_tools.selectors import IBMLeastBusyQPUSelector\n",
@@ -185,7 +347,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc45489-56d0-4f46-8659-9df4d1555516",
    "metadata": {},
    "source": [
     "## Manage data across your program\n",
@@ -200,17 +361,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0183278f-8ce3-4466-9255-097b2d211052",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"message\":\"/usr/src/app/media/5f37582aa306c50013fac285/transpile_demo.tar\"}'"
+       "'{\"message\":\"/usr/src/app/media/5e1f442128cdf60018496a04/transpile_demo.tar\"}'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +381,7 @@
     "# Create a tar\n",
     "filename = \"transpile_demo.tar\"\n",
     "file = tarfile.open(filename,\"w\")\n",
-    "file.add(\"source_files/transpile_remote.py\")\n",
+    "file.add(\"./source_files/transpile_parallel.py\")\n",
     "file.close()\n",
     "\n",
     "# Upload the tar to Serverless data directory\n",
@@ -230,7 +390,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f762470-945f-48d5-a65b-c60d3b2dae3f",
    "metadata": {},
    "source": [
     "Next, you can list all the files in your `data` directory. This data is accessible to all programs."
@@ -238,8 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "14241fc4-d0cb-4803-8752-a460e1f48708",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +406,7 @@
        "['transpile_demo.tar']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +417,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a97bd83e-8250-43bb-b1c4-d40d822c7ba2",
    "metadata": {},
    "source": [
     "This can be done from a program by using `file_download()` to download the file to the program environment, and uncompressing the `tar`."
@@ -267,34 +424,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ef649b2a-ed95-4dd2-89d9-61438faa7c1e",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10.2k/10.2k [00:00<00:00, 10.0MiB/s]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "downloaded_3d3c4bf6_transpile_demo.tar\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Appending to ./source_files/transpile_parallel.py\n"
      ]
     }
    ],
    "source": [
-    "# transpile_parallel.py\n",
+    "%%writefile --append ./source_files/transpile_parallel.py\n",
     "\n",
     "import tarfile\n",
     "\n",
@@ -308,8 +450,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Job still running, waiting 5s then retrying (3)\r"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Something went wrong. See following serverless logs:\n\n2024-09-13 15:49:52,472\tINFO job_manager.py:531 -- Runtime env is setting up.\nTraceback (most recent call last):\n  File \"/tmp/ray/session_2024-09-13_15-49-42_152664_1/runtime_resources/working_dir_files/_ray_pkg_f23b08bce382b975/transpile_parallel.py\", line 4, in <module>\n    from qiskit_serverless_tools.selectors import IBMLeastNoisyQPUSelector\nModuleNotFoundError: No module named 'qiskit_serverless_tools'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 28\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m status \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mERROR\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 28\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSomething went wrong. See following serverless logs:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m job\u001b[38;5;241m.\u001b[39mlogs())\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJob still running, waiting 5s then retrying (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mretry\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\r\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     30\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[0;31mException\u001b[0m: Something went wrong. See following serverless logs:\n\n2024-09-13 15:49:52,472\tINFO job_manager.py:531 -- Runtime env is setting up.\nTraceback (most recent call last):\n  File \"/tmp/ray/session_2024-09-13_15-49-42_152664_1/runtime_resources/working_dir_files/_ray_pkg_f23b08bce382b975/transpile_parallel.py\", line 4, in <module>\n    from qiskit_serverless_tools.selectors import IBMLeastNoisyQPUSelector\nModuleNotFoundError: No module named 'qiskit_serverless_tools'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell is hidden from users.\n",
+    "# It uploads the serverless program and checks it runs.\n",
+    "\n",
+    "from qiskit.circuit.random import random_circuit\n",
+    "from qiskit_serverless import IBMServerlessClient, QiskitFunction\n",
+    "import time\n",
+    "\n",
+    "TITLE = \"transpile_remote_serverless_test\"  # TODO: Randomize names to avoid conflict\n",
+    "serverless = IBMServerlessClient()\n",
+    "transpile_remote_demo = QiskitFunction(\n",
+    "    title=TITLE,\n",
+    "    entrypoint=\"transpile_parallel.py\",\n",
+    "    working_dir=\"./source_files/\",\n",
+    "\tdependencies=[\"qiskit-aer==0.14.1\"],\n",
+    ")\n",
+    "serverless.upload(transpile_remote_demo)\n",
+    "job = serverless.get(TITLE).run(\n",
+    "    circuit=random_circuit(3,3),\n",
+    "    circuit_list=[random_circuit(3,3) for _ in range(3)],\n",
+    "    backend=\"ibm_kyiv\",\n",
+    "    optimization_level=1,\n",
+    ")\n",
+    "for retry in range(20):\n",
+    "    status = job.status()\n",
+    "    if status == \"DONE\":\n",
+    "        break\n",
+    "    if status == \"ERROR\":\n",
+    "        raise Exception(\"Something went wrong. See following serverless logs:\\n\\n\" + job.logs())\n",
+    "    print(f\"Job still running, waiting 5s then retrying ({retry})\", end=\"\\r\")\n",
+    "    time.sleep(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "5b93dbdb-2060-468b-8496-ba98142a780b",
    "metadata": {},
    "source": [
     "At this point, your program can interact with the files, as you would a local experiment. `file_upload()` , `file_download()`, and `file_delete()` can be called from your local experiment, or your uploaded program, for consistent and flexible data management."
@@ -317,7 +515,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a004dd78-0e0a-4a3b-83cb-333469533ef6",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -334,7 +531,7 @@
  "metadata": {
   "description": "Manage compute and data across your Qiskit pattern with Qiskit Serverless.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -348,10 +545,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.4"
   },
   "title": "Manage Qiskit Serverless compute and data resources"
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
