--- a/docs/api/qiskit-ibm-transpiler/0.5/qiskit_ibm_transpiler.transpiler_service.TranspilerService.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.5/qiskit_ibm_transpiler.transpiler_service.TranspilerService.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit_ibm_transpiler.transpiler_service.TranspilerService
 
 # TranspilerService
 
-<Class id="qiskit_ibm_transpiler.transpiler_service.TranspilerService" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.6/qiskit_ibm_transpiler/transpiler_service.py#L42-L124" signature="qiskit_ibm_transpiler.transpiler_service.TranspilerService(optimization_level, ai='true', coupling_map=None, backend_name=None, qiskit_transpile_options=None, ai_layout_mode=None, optimization_preferences=None, **kwargs)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.transpiler_service.TranspilerService" isDedicatedPage={true} signature="qiskit_ibm_transpiler.transpiler_service.TranspilerService(optimization_level, ai='true', coupling_map=None, backend_name=None, qiskit_transpile_options=None, ai_layout_mode=None, **kwargs)" modifiers="class">
   Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.12)")
 
   Class for using the transpiler service.
@@ -16,7 +16,6 @@ python_api_name: qiskit_ibm_transpiler.transpiler_service.TranspilerService
   **Parameters**
 
   *   **optimization\_level** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) – The optimization level to use during the transpilation. There are 4 optimization levels ranging from 0 to 3, where 0 is intended for not performing any optimizations and 3 spends the most effort to optimize the circuit.
-  *   **optimization\_preferences** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")  *|*[*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")*\[*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")*], optional*) – Describe your preferences with a value or a list of values when prioritizing optimization. Allowed options: noise, n\_cnots, n\_gates, cnot\_layers, layers.
   *   **ai** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")*, optional*) – Specifies if the transpilation should use AI or not, defaults to True.
   *   **coupling\_map** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")*\[*[*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")*]], optional*) – A list of pairs that represents physical links between qubits.
   *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")*, optional*) – Name of the backend used for doing the transpilation.
@@ -27,7 +26,7 @@ python_api_name: qiskit_ibm_transpiler.transpiler_service.TranspilerService
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.transpiler_service.TranspilerService.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.6/qiskit_ibm_transpiler/transpiler_service.py#L95-L124" signature="run(circuits)">
+  <Function id="qiskit_ibm_transpiler.transpiler_service.TranspilerService.run" signature="run(circuits)">
     Transpile the circuit(s) by calling the service /transpile endpoint.
 
     **Parameters**
